platform/kustomize/base/corpshared-mgmt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drr-corpshared-mgmt
  labels:
    darueira.io/tier: enterprise-shared
    darueira.io/plane: control-plane-management
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
